--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,5 +1,10 @@
+* {
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
 button {
     padding: 10px 30px;
+    margin-block: 15px;
     background-color: #017DC7;
     color: white;
     border-radius: 5px;
@@ -7,7 +12,17 @@ button {
 
 button:hover {
     cursor: pointer;
+    margin-top: 15px;
     color: #017DC7;
     background-color: #ddd;
+}
 
+body {
+    position: relative;
+    width: 100%;
+    background-image: url("../assets/imagenFondo.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: soft-light;
 }
